--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<meta charset="UTF-8">
 	<title>Angular</title>
 	<link rel="stylesheet" href="styles.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-	<script src="https://unpkg.com/angular-ui-router@1.0.3/release/angular-ui-router.min.js"></script>
 </head>
 <body ng-app="studentsList" ng-controller="studentsController">
 	<ui-view></ui-view>
@@ -13,7 +11,8 @@
 
 
 <!-- 	<script src="./node_modules/angular/angular.js"></script> -->
-	
+	<script src="angular.js"></script>
+	<script src="https://unpkg.com/angular-ui-router@1.0.3/release/angular-ui-router.min.js"></script>
 	<script src="module_student.js"></script>
 	<script src="directive_student.js"></script>
 	<script src="controller_student.js"></script>
