--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<ui-view></ui-view>
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 	<script src="https://unpkg.com/angular-ui-router@1.0.3/release/angular-ui-router.min.js"></script>
-	<script src="module_student.js"></script>
-	<script src="directive_student.js"></script>
-	<script src="controller_student.js"></script>
-	<script src="config_student.js"></script>
+	<script src="js/module_student.js"></script>
+	<script src="js/directive_student.js"></script>
+	<script src="js/controller_student.js"></script>
+	<script src="js/config_student.js"></script>
 </body>
 </html>
